test/libyul/yulSyntaxTests/more_than_256_analysis_errors.yul
{
    // There's no type called 'x' so every declaration here should trigger an error.
    // It's only detected during analysis and is not fatal. Any other non-fatal analysis error would do.
    let $00:x let $10:x let $20:x let $30:x let $40:x let $50:x let $60:x let $70:x let $80:x let $90:x let $a0:x let $b0:x let $c0:x let $d0:x let $e0:x let $f0:x
    let $01:x let $11:x let $21:x let $31:x let $41:x let $51:x let $61:x let $71:x let $81:x let $91:x let $a1:x let $b1:x let $c1:x let $d1:x let $e1:x let $f1:x
    let $02:x let $12:x let $22:x let $32:x let $42:x let $52:x let $62:x let $72:x let $82:x let $92:x let $a2:x let $b2:x let $c2:x let $d2:x let $e2:x let $f2:x
    let $03:x let $13:x let $23:x let $33:x let $43:x let $53:x let $63:x let $73:x let $83:x let $93:x let $a3:x let $b3:x let $c3:x let $d3:x let $e3:x let $f3:x
    let $04:x let $14:x let $24:x let $34:x let $44:x let $54:x let $64:x let $74:x let $84:x let $94:x let $a4:x let $b4:x let $c4:x let $d4:x let $e4:x let $f4:x
    let $05:x let $15:x let $25:x let $35:x let $45:x let $55:x let $65:x let $75:x let $85:x let $95:x let $a5:x let $b5:x let $c5:x let $d5:x let $e5:x let $f5:x
    let $06:x let $16:x let $26:x let $36:x let $46:x let $56:x let $66:x let $76:x let $86:x let $96:x let $a6:x let $b6:x let $c6:x let $d6:x let $e6:x let $f6:x
    let $07:x let $17:x let $27:x let $37:x let $47:x let $57:x let $67:x let $77:x let $87:x let $97:x let $a7:x let $b7:x let $c7:x let $d7:x let $e7:x let $f7:x
    let $08:x let $18:x let $28:x let $38:x let $48:x let $58:x let $68:x let $78:x let $88:x let $98:x let $a8:x let $b8:x let $c8:x let $d8:x let $e8:x let $f8:x
    let $09:x let $19:x let $29:x let $39:x let $49:x let $59:x let $69:x let $79:x let $89:x let $99:x let $a9:x let $b9:x let $c9:x let $d9:x let $e9:x let $f9:x
    let $0a:x let $1a:x let $2a:x let $3a:x let $4a:x let $5a:x let $6a:x let $7a:x let $8a:x let $9a:x let $aa:x let $ba:x let $ca:x let $da:x let $ea:x let $fa:x
    let $0b:x let $1b:x let $2b:x let $3b:x let $4b:x let $5b:x let $6b:x let $7b:x let $8b:x let $9b:x let $ab:x let $bb:x let $cb:x let $db:x let $eb:x let $fb:x
    let $0c:x let $1c:x let $2c:x let $3c:x let $4c:x let $5c:x let $6c:x let $7c:x let $8c:x let $9c:x let $ac:x let $bc:x let $cc:x let $dc:x let $ec:x let $fc:x
    let $0d:x let $1d:x let $2d:x let $3d:x let $4d:x let $5d:x let $6d:x let $7d:x let $8d:x let $9d:x let $ad:x let $bd:x let $cd:x let $dd:x let $ed:x let $fd:x
    let $0e:x let $1e:x let $2e:x let $3e:x let $4e:x let $5e:x let $6e:x let $7e:x let $8e:x let $9e:x let $ae:x let $be:x let $ce:x let $de:x let $ee:x let $fe:x
    let $0f:x let $1f:x let $2f:x let $3f:x let $4f:x let $5f:x let $6f:x let $7f:x let $8f:x let $9f:x let $af:x let $bf:x let $cf:x let $df:x let $ef:x let $ff:x
    let $100:x
}
// ----
// TypeError 5473: (200-205): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (210-215): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (220-225): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (230-235): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (240-245): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (250-255): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (260-265): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (270-275): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (280-285): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (290-295): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (300-305): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (310-315): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (320-325): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (330-335): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (340-345): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (350-355): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (364-369): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (374-379): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (384-389): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (394-399): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (404-409): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (414-419): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (424-429): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (434-439): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (444-449): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (454-459): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (464-469): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (474-479): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (484-489): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (494-499): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (504-509): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (514-519): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (528-533): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (538-543): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (548-553): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (558-563): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (568-573): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (578-583): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (588-593): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (598-603): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (608-613): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (618-623): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (628-633): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (638-643): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (648-653): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (658-663): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (668-673): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (678-683): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (692-697): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (702-707): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (712-717): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (722-727): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (732-737): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (742-747): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (752-757): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (762-767): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (772-777): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (782-787): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (792-797): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (802-807): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (812-817): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (822-827): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (832-837): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (842-847): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (856-861): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (866-871): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (876-881): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (886-891): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (896-901): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (906-911): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (916-921): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (926-931): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (936-941): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (946-951): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (956-961): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (966-971): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (976-981): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (986-991): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (996-1001): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1006-1011): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1020-1025): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1030-1035): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1040-1045): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1050-1055): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1060-1065): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1070-1075): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1080-1085): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1090-1095): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1100-1105): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1110-1115): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1120-1125): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1130-1135): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1140-1145): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1150-1155): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1160-1165): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1170-1175): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1184-1189): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1194-1199): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1204-1209): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1214-1219): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1224-1229): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1234-1239): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1244-1249): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1254-1259): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1264-1269): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1274-1279): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1284-1289): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1294-1299): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1304-1309): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1314-1319): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1324-1329): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1334-1339): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1348-1353): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1358-1363): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1368-1373): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1378-1383): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1388-1393): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1398-1403): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1408-1413): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1418-1423): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1428-1433): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1438-1443): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1448-1453): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1458-1463): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1468-1473): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1478-1483): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1488-1493): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1498-1503): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1512-1517): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1522-1527): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1532-1537): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1542-1547): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1552-1557): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1562-1567): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1572-1577): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1582-1587): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1592-1597): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1602-1607): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1612-1617): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1622-1627): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1632-1637): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1642-1647): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1652-1657): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1662-1667): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1676-1681): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1686-1691): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1696-1701): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1706-1711): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1716-1721): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1726-1731): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1736-1741): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1746-1751): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1756-1761): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1766-1771): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1776-1781): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1786-1791): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1796-1801): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1806-1811): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1816-1821): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1826-1831): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1840-1845): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1850-1855): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1860-1865): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1870-1875): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1880-1885): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1890-1895): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1900-1905): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1910-1915): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1920-1925): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1930-1935): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1940-1945): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1950-1955): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1960-1965): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1970-1975): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1980-1985): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (1990-1995): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2004-2009): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2014-2019): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2024-2029): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2034-2039): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2044-2049): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2054-2059): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2064-2069): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2074-2079): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2084-2089): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2094-2099): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2104-2109): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2114-2119): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2124-2129): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2134-2139): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2144-2149): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2154-2159): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2168-2173): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2178-2183): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2188-2193): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2198-2203): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2208-2213): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2218-2223): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2228-2233): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2238-2243): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2248-2253): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2258-2263): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2268-2273): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2278-2283): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2288-2293): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2298-2303): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2308-2313): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2318-2323): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2332-2337): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2342-2347): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2352-2357): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2362-2367): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2372-2377): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2382-2387): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2392-2397): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2402-2407): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2412-2417): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2422-2427): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2432-2437): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2442-2447): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2452-2457): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2462-2467): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2472-2477): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2482-2487): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2496-2501): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2506-2511): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2516-2521): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2526-2531): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2536-2541): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2546-2551): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2556-2561): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2566-2571): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2576-2581): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2586-2591): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2596-2601): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2606-2611): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2616-2621): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2626-2631): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2636-2641): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2646-2651): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2660-2665): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2670-2675): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2680-2685): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2690-2695): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2700-2705): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2710-2715): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2720-2725): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2730-2735): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2740-2745): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2750-2755): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2760-2765): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2770-2775): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2780-2785): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2790-2795): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2800-2805): "x" is not a valid type (user defined types are not yet supported).
// TypeError 5473: (2810-2815): "x" is not a valid type (user defined types are not yet supported).
// Warning 4013: There are more than 256 errors. Aborting.
